# no_nonsense_engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
dependencies/: nuklear_config.c  nuklear_def.h
src/: config.h  image_view.c  image_view.h  main.c  model.c  model.h  render.c  render.h  tga_image.c  tga_image.h  transformation.c  transformation.h  type.c  type.h  vector_math.c  vector_math.h
src/models/shiba/: shiba.mtl
src/util/: util.c  util.h
